--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
-  local_dir: documentation/html
+  local_dir: $TRAVIS_BUILD_DIR/docs/html
   github_token: $GH_REPO_TOKEN
   on:
     branch: master
